src/objects/Apttus_Config2__PriceRuleset__c.object
<CustomObject>
    <description>Represents a rule set that contains the a list of rules to modify prices of products the organization sells.</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the ruleset is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the adjustment should be applied to. Not applicable to price override adjustments. This field is deprecated. The Adjustment applies to is moved to the Price Rule.</description>
        <label>Adjustment Applies To (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                    <default>true</default>
                    <label>Base Price</label>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
        <description>The ruleset application method. Only applicable to aggregate price rules.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apply to Line Items</fullName>
                </value>
                <value>
                    <fullName>Create Summary Lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Category__c</fullName>
        <description>The category associated with the ruleset.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the rule set</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The ruleset criteria specification</description>
        <label>Ruleset Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description of the rule set</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule set effective date. The rule set becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExclusionCriteria__c</fullName>
        <description>The ruleset exclusion criteria specification</description>
        <inlineHelpText>The ruleset exclusion criteria specification</inlineHelpText>
        <label>Ruleset Exclusion Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule set expiration date. The rule set becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the ruleset has criteria associated with it</description>
        <inlineHelpText>Indicates whether the ruleset has criteria associated with it</inlineHelpText>
        <label>Has Ruleset Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the incentive associated with the ruleset. Only applicable for incentives.</description>
        <inlineHelpText>ID of the incentive associated with the ruleset. Only applicable for incentives.</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Price Rulesets</relationshipLabel>
        <relationshipName>PriceRulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the ruleset</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Price Rulesets</relationshipLabel>
        <relationshipName>PriceRulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the rule set</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the rule set</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group associated with the ruleset</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Price Rulesets</relationshipLabel>
        <relationshipName>PriceRulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <inlineHelpText>The rule set evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent rules from processing</description>
        <label>Stop Processing More Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The rule set type</description>
        <inlineHelpText>The rule set type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The rule set use type</description>
        <label>Application Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Item</fullName>
                    <default>true</default>
                    <label>Line Item</label>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Ruleset</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>